# Noita-Dear-ImGui

./: .gitignore  CMakeLists.txt  Documentation.md  LICENSE  README.md  TC-clang.cmake  TC-mingw.cmake  add_lua_features.cpp  add_lua_features.hpp  build_on_linux.sh  build_on_linux_clang.sh  incr_version.sh  main.cpp  mod.xml.in  version_info.cpp.in  version_info.txt.in
.github/workflows/: build.yml
DearImGui/: init.lua
ExampleMod/: README.md  init.lua  mod.xml
ExampleNative/: CMakeLists.txt  README.md  main.cpp
ExampleNative/NoitaDearImGuiExampleNative/: compatibility.xml  init.lua  mod.xml
ExampleNative/NoitaDearImGuiNativeExample/: init.lua  mod.xml
NoitaDearImGui/: compatibility.xml  init.lua  load.lua  mod.xml  settings.lua
cmake/: write_git_info.cmake
docgen/: definitions.py  make_docs.py  type_conv.py
fixup/: SDL_syswm.h
imguidoc/: imgui_definitions.lua
packaging/: CMakeLists.txt
src/: CMakeLists.txt  add_lua_features.cpp  add_lua_features.hpp  data_wak_reader.cpp  data_wak_reader.hpp  filesystem.cpp  filesystem.hpp  fonts.cpp  fonts.hpp  hook_points.cpp  hook_points.hpp  image_loader.cpp  image_loader.hpp  imgui_impl_sdl.cpp  imgui_impl_sdl2.cpp  main.cpp  pause.cpp  stb_image.h  style.cpp  style.hpp  version_compat_window.cpp  version_compat_window.hpp  version_number.cpp  version_number.hpp  wine_compat.cpp  wine_compat.hpp
src/include/noita_imgui/: add_lua_features.hpp  imgui_config.hpp  pause.hpp  version_info.hpp  version_number.hpp
src/lua_features/: container.cpp  container.hpp  imgui_clipboard.cpp  imgui_color_editor.cpp  imgui_combo_box.cpp  imgui_common.cpp  imgui_disable.cpp  imgui_docking.cpp  imgui_drag_and_drop.cpp  imgui_drag_sliders.cpp  imgui_font.cpp  imgui_gui_io.cpp  imgui_images.cpp  imgui_keyboard_input.cpp  imgui_layout.cpp  imgui_list_clipper.cpp  imgui_menu.cpp  imgui_mouse_input.cpp  imgui_param_stacks.cpp  imgui_popup.cpp  imgui_regular_sliders.cpp  imgui_scopes.cpp  imgui_style.cpp  imgui_tables.cpp  imgui_tabs.cpp  imgui_text.cpp  imgui_text_input.cpp  imgui_tooltips.cpp  imgui_trees.cpp  imgui_version_info.cpp  imgui_viewports.cpp  imgui_widget_utils.cpp  imgui_widgets_main.cpp  imgui_windows.cpp  implot.cpp
src/tests/: CMakeLists.txt  test_version.cpp
